# urdf-model

./: .gitignore  Dockerfile  README.md  requirements.txt
de.fraunhofer.ipa.json-schema-generator/: dependency-reduced-pom.xml  pom.xml
de.fraunhofer.ipa.json-schema-generator/model/: component.ecore  kinematics.ecore  urdf.ecore  xacro.ecore
de.fraunhofer.ipa.kinematics-model/: pom.xml
de.fraunhofer.ipa.kinematics-model/model/: kinematics.genmodel
de.fraunhofer.ipa.kinematics-model/src/kinematics/: ActuatorTransmission.java  Axis.java  Box.java  Calibration.java  Child.java  Collision.java  Color.java  Cylinder.java  DocumentRoot.java  Dynamics.java  GapJointTransmission.java  Geometry.java  Inertia.java  Inertial.java  Joint.java  KinematicsFactory.java  KinematicsPackage.java  Limit.java  Link.java  Mass.java  Material.java  MaterialGlobal.java  Mesh.java  Mimic.java  Name.java  Parent.java  PassiveJointTransmission.java  Pose.java  Robot.java  SafetyController.java  Sphere.java  Texture.java  Transmission.java  UseSimulatedGripperJointType.java  Verbose.java  Visual.java
de.fraunhofer.ipa.kinematics-model/src/kinematics/impl/: ActuatorTransmissionImpl.java  AxisImpl.java  BoxImpl.java  CalibrationImpl.java  ChildImpl.java  CollisionImpl.java  ColorImpl.java  CylinderImpl.java  DocumentRootImpl.java  DynamicsImpl.java  GapJointTransmissionImpl.java  GeometryImpl.java  InertiaImpl.java  InertialImpl.java  JointImpl.java  KinematicsFactoryImpl.java  KinematicsPackageImpl.java  LimitImpl.java  LinkImpl.java  MassImpl.java  MaterialGlobalImpl.java  MaterialImpl.java  MeshImpl.java  MimicImpl.java  NameImpl.java  ParentImpl.java  PassiveJointTransmissionImpl.java  PoseImpl.java  RobotImpl.java  (+7 more)
docs/source/: index.rst  kinematics_doc.rst
kinematics-model-parser/: requirements.txt
kinematics-model-parser/kinematics_model_generator/: CMakeLists.txt  package.xml
kinematics-model-parser/kinematics_model_generator/config/: component_list.yaml
kinematics-model-parser/kinematics_model_generator/doc/: kinematics_doc.md
kinematics-model-parser/kinematics_model_generator/include/kinematics_model_generator/: mcp_generator.hpp
kinematics-model-parser/kinematics_model_generator/kinematics_model_generator/: __init__.py  cli.py
kinematics-model-parser/kinematics_model_generator/kinematics_model_generator/kinematics/: __init__.py  kinematics.py
kinematics-model-parser/kinematics_model_generator/kinematics_model_generator/kinematics/component/: __init__.py  component.py
kinematics-model-parser/kinematics_model_generator/kinematics_model_generator/kinematics/urdf/: __init__.py  urdf.py
kinematics-model-parser/kinematics_model_generator/kinematics_model_generator/kinematics/xacro/: __init__.py  xacro.py
kinematics-model-parser/kinematics_model_generator/kinematics_model_generator/utils/: xml_helper.py
kinematics-model-parser/kinematics_model_generator/models/: _d435_camera.kin  composed_prbt_workcell.kin  composed_ur_workcell.kin  prbt.kin  prbt_flange.kin  prbt_workcell.kin  schunk_egp40.kin  test.kin.yaml  ur5e.kin  ur5e_workcell.kin  workcell.kin
kinematics-model-parser/kinematics_model_generator/resources/: kinematics_schema.json
kinematics-model-parser/kinematics_model_generator/scripts/: batch_model_generator.py  kinematics_parser.py  update_mcp.py  urdf_parser.py  xacro_parser.py
kinematics-model-parser/kinematics_model_generator/src/: main.cpp  mcp_generator.cpp
kinematics-model-parser/kinematics_model_generator/template/: xacro.template
kinematics-model-parser/kinematics_model_generator/urdf/: pelican.urdf
kinematics-model-parser/scripts/: clone_packages.sh  start_docker.sh
(+4 files in other folders)
